[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ragsec"
version = "0.2.0"
description = "Static security scanner for RAG pipelines"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Hrushikesh Yadav", email = "yadavhrushikesh65@gmail.com" }]
keywords = ["rag", "security", "scanner", "vector-store", "static-analysis", "llm", "vulnerability", "sast"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click>=8.0",
    "jinja2>=3.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/HrushiYadav/ragGuard"
Repository = "https://github.com/HrushiYadav/ragGuard"
Issues = "https://github.com/HrushiYadav/ragGuard/issues"

[project.scripts]
ragguard = "ragguard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["ragguard"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
